# services-test4

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE.md  README.md  gen_ref_pages.py  index.html  mkdocs.yml  pyproject.toml  versions.json
.github/: dependabot.yml  labels.yml
.github/requirements/: ci.txt
.github/templates/: .release_notes.md.j2  CHANGELOG.md.j2
.github/workflows/: cd.yml  ci.yml  docs.yml  label.yml  labeler.yml  labels.yml  lint.yml  main.yml  pr.yml  pre-commit-autoupdate.yml  publish.yml  requirements.in  requirements.txt  stale.yml  test.yml  update-requirements.yml
0.13.0/changelog/: index.html
0.13.0/search/: search_index.json
0.14.0/changelog/: index.html
0.15.0/changelog/: index.html
0.15.0/search/: search_index.json
0.15.2/changelog/: index.html
0.15.2/search/: search_index.json
0.15.3/changelog/: index.html
0.15.3/reference/: index.html
0.15.3/search/: search_index.json
0.15.4/changelog/: index.html
0.15.4/search/: search_index.json
0.15.6/changelog/: index.html
0.15.6/search/: search_index.json
0.16.0/: 404.html  index.html
0.16.0/changelog/: index.html
0.16.0/license/: index.html
0.16.0/reference/: index.html
0.16.0/reference/cli/: index.html
0.16.0/reference/lib/: index.html
0.16.0/search/: search_index.json
0.17.0/changelog/: index.html
0.17.0/search/: search_index.json
0.18.0/: 404.html  index.html
0.18.0/changelog/: index.html
0.19.0/changelog/: index.html
0.19.1/changelog/: index.html
0.19.1/reference/lib/: index.html
0.19.2/changelog/: index.html
0.19.3/changelog/: index.html
0.19.4/changelog/: index.html
0.19.4/reference/: index.html
0.19.4/search/: search_index.json
0.19.5/changelog/: index.html
0.19.5/search/: search_index.json
0.19.6/changelog/: index.html
0.19.6/license/: index.html
0.19.6/reference/cli/: index.html
0.19.6/search/: search_index.json
0.19.7/changelog/: index.html
0.19.7/search/: search_index.json
0.20.0/: 404.html  index.html
0.20.0/changelog/: index.html
0.20.0/license/: index.html
0.20.0/search/: search_index.json
0.20.1/: 404.html  index.html  sitemap.xml
0.20.1/changelog/: index.html
0.20.1/license/: index.html
0.20.1/search/: search_index.json
0.20.2/: 404.html  index.html  sitemap.xml
0.20.2/changelog/: index.html
0.20.2/license/: index.html
0.20.2/search/: search_index.json
0.20.3/: 404.html  index.html  sitemap.xml
0.20.3/changelog/: index.html
0.20.3/license/: index.html
0.20.3/search/: search_index.json
0.20.4/: 404.html  index.html  sitemap.xml
0.20.4/changelog/: index.html
0.20.4/license/: index.html
0.20.4/search/: search_index.json
0.20.5/: 404.html  index.html  sitemap.xml
0.20.5/changelog/: index.html
0.20.5/license/: index.html
0.20.5/search/: search_index.json
0.21.0/: 404.html  index.html  sitemap.xml
0.21.0/changelog/: index.html
0.21.0/license/: index.html
0.21.0/search/: search_index.json
0.21.1/: 404.html  index.html  sitemap.xml
0.21.1/changelog/: index.html
0.21.1/license/: index.html
0.21.1/search/: search_index.json
0.21.2/: 404.html  index.html  sitemap.xml
0.21.2/changelog/: index.html
0.21.2/license/: index.html
0.21.2/search/: search_index.json
0.21.3/: 404.html  index.html  sitemap.xml
0.21.3/changelog/: index.html
0.21.3/license/: index.html
0.21.3/search/: search_index.json
0.21.4/: 404.html  index.html  sitemap.xml
0.21.4/changelog/: index.html
0.21.4/license/: index.html
0.21.4/search/: search_index.json
0.21.5/: 404.html  index.html  sitemap.xml
0.21.5/changelog/: index.html
0.21.5/license/: index.html
0.21.5/search/: search_index.json
0.21.6/: 404.html  index.html  sitemap.xml
0.21.6/changelog/: index.html
0.21.6/license/: index.html
0.21.6/search/: search_index.json
0.21.7/: 404.html  index.html  sitemap.xml
0.21.7/changelog/: index.html
0.21.7/license/: index.html
0.21.7/search/: search_index.json
0.21.8/: 404.html  index.html  sitemap.xml
0.21.8/changelog/: index.html
0.21.8/license/: index.html
0.21.8/search/: search_index.json
changelog/: index.html
docs/: gen_ref_pages.py  license.md  mkdocs.yml
license/: index.html
reference/: SUMMARY.txt  index.html
reference/cli/: index.html
reference/lib/: index.html
requirements/: docs.txt
search/: search_index.json
src/services_test4/: __init__.py  __main__.py  cli.py  lib.py
templates/: .release_notes.md.j2  CHANGELOG.md.j2
tests/: test_cli.py  test_lib.py
